--- a/templates/regions.html
+++ b/templates/regions.html
@@ -1,3 +1,5 @@
+<div class="row">
 <div class="list-group">
 	<a class="pointer list-group-item col-sm-3" ng-repeat="item in data">{{item.name}}<span class="glyphicon glyphicon-link pull-right" aria-hidden="true"></span></a>	
+</div>
 </div>
