--- a/templates/link.html
+++ b/templates/link.html
@@ -1,5 +1,6 @@
+<div class="row">
 <div class="list-group">
 	<a class="pointer list-group-item col-sm-3" ng-repeat="(linkname,link) in links" ng-click="loadData()">{{linkname}}<span class="glyphicon glyphicon-link pull-right" aria-hidden="true"></span></a>	
 </div>
-
+</div>
 <!-- <div class="pointer col-sm-3" ng-repeat="(linkname,link) in links" >{{linkname}}</div> -->
